Bug ID: 65587
At the expense of squished userpics, set a height on these areas so that the table rows line up well.


git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@13430 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/widgets/verticalentries.css
+++ b/htdocs/stc/widgets/verticalentries.css
@@ -64,6 +64,7 @@
 
 .appwidget-verticalentries .entry-collapsed .userpic-img {
     width: 60px;
+    height: 60px;
     vertical-align: top;
     margin: 0 7px 7px 0;
     float: left;
