--- a/htdocs/stc/widgets/verticalsummary.css
+++ b/htdocs/stc/widgets/verticalsummary.css
@@ -26,6 +26,7 @@
 
 .appwidget-verticalsummary .userpic-img {
     width: 35px;
+    height: 35px;
     vertical-align: top;
     margin: 0 7px 7px 0;
     float: left;
